<resources>
    <string name="app_name">Tact</string>
    <string name="app_package">com.tactile.tact</string>
    <string-array name="drawer_menu_array">
        <item>Profile</item>
        <item>Help</item>
        <item>Log Out</item>
    </string-array>
    <string-array name="word_list">
        <item>a</item>
        <item>b</item>
        <item>c</item>
        <item>d</item>
        <item>e</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>i</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>m</item>
        <item>n</item>
        <item>o</item>
        <item>p</item>
        <item>q</item>
        <item>r</item>
        <item>s</item>
        <item>t</item>
        <item>u</item>
        <item>v</item>
        <item>w</item>
        <item>y</item>
        <item>z</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="login_with_email">Log In using a registered Email</string>
    <string name="log_me_in">Log In</string>
    <string name="get_me_started">Create Account</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="create_password">Create a password (8 characters minimum)</string>
    <string name="confirm_a_password">Confirm a password</string>
    <string name="min_password_string">Password must have minimum of 8 characters.</string>
    <string name="reset_password_hint">Enter E-mail address</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="reset_password_legend">Enter your email to receive instruction for resetting your password</string>
    <string name="login_server_error">Uh oh! Tact was unable to connect to server. Please try again.</string>
    <string name="login_email_error">Uh oh! Your email and/or password don\'t match our records. Please try again.</string>
    <string name="login_email_format_error">Uh oh! Your email has incorrect format.</string>
    <string name="login_email_error_empty_string">Email and password are both required. Please try again.</string>
    <string name="connect_to_email">Connect More Sources</string>
    <string name="skip_to_registration">Skip to Registration</string>
    <string name="logout_sf_button">Log Out of SF</string>
    <string name="logout_gmail_button">Log out of G+</string>
    <string name="connect_to_exchange">Connect Exchange</string>
    <string name="connect_to_linkedin">Connect LinkedIn</string>
    <string name="exchange_email">Exchange Email</string>
    <string name="enter_exchange_info">Enter Your Exchange Info</string>
    <string name="register_me">Register</string>
    <string name="type_in_a_password">Type in a password</string>
    <string name="type_in_a_username">Type in a username</string>
    <string name="username">Tact username</string>
    <string name="password_repeat">Repeat</string>
    <string name="passwords_dont_match">Passwords don\'t match. Try Again</string>
    <string name="incorrect_login_error">Incorrect user/pass. Please try again.</string>
    <string name="invalid_email">Invalid Email. Please try again.</string>
    <string name="reset_password_success">Reset Password Request was successfully sent to our server</string>
    <string name="congratulations">Congratulations!</string>
    <string name="redeem_cookie">…on a successful fake-registration. You may now redeem a cookie from Prem\@Tactile</string>
    <string name="start_over">Start Over</string>
    <string name="in_home_now">…You\'re now Logged in. This is a placeholder screen for the Tact app home. Conversations, Agenda, Contacts, Notes etc.</string>
    <string name="logout_button">Log Out</string>
    <string name="account_type">com.tactile.tact.login</string>
    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="tab">home screen tab</string>
    <string name="agenda">Agenda</string>
    <string name="conversations">Conversations</string>
    <string name="calendar">Calendar</string>
    <string name="tasks">Tasks</string>
    <string name="placeholder_icon_initials">JW</string>
    <string name="contact_search_hint">Search all contacts</string>
    <string name="contact_filter_all">All</string>
    <string name="contact_filter_starred">Starred</string>
    <string name="contact_filter_recent">Recent</string>
    <string name="contact_not_found">No contacts found</string>
    <string name="edit_text">Edit</string>
    <string name="note">Note</string>
    <string name="log">Log</string>
    <string name="default_contact_details_label"></string>
    <string name="contact_details_title_placeholder"></string>
    <string name="contact_details_subtitle_placeholder"></string>
    <string name="contact_details_conversations">CONVERSATIONS</string>
    <string name="contact_details_no_conversations">No Conversations</string>
    <string name="contact_details_tasks">TASKS</string>
    <string name="contact_details_no_tasks">No Tasks</string>
    <string name="contact_details_connect_linkedin">CONNECT LINKEDIN</string>
    <string name="contact_details_details">DETAILS</string>
    <string name="contact_details_no_details">No Details</string>
    <string name="new_note_hint_string">Type %s</string>
    <string name="contact_details_mobile">MOBILE</string>
    <string name="contact_details_work">WORK</string>
    <string name="contact_details_personal">OTHER</string>
    <string name="contact_details_home">HOME</string>
    <string name="contact_details_other">OTHER</string>
    <string name="contact_details_twitter">TWITTER</string>
    <string name="contact_details_facebook">FACEBOOK</string>
    <string name="contact_details_linkedin">LINKEDIN</string>
    <string name="contact_details_fax">"FAX"</string>
    <string name="contact_details_industry">INDUSTRY</string>
    <string name="contact_details_annual_revenue">ANNUAL REVENUE</string>
    <string name="contact_details_number_of_employees">NUMBER OF EMPLOYEES</string>
    <string name="contact_details_ticker_symbol">TICKER SYMBOL</string>
    <string name="contact_details_address">ADDRESS</string>
    <string name="contact_details_website">WEBSITE"</string>
    <string name="send_email">Send Email</string>
    <string name="contact_details_detail_placeholder">+1 (555) 123 4567</string>
    <string name="plus_button">+</string>
    <string name="employes">Employes</string>
    <string name="capture_note">CAPTURE %s</string>
    <string name="create_followup_task">Create follow up task</string>
    <string name="log_to_salesforce">Logging to Salesforce</string>
    <string name="discard">discard</string>
    <string name="save">save</string>
    <string name="onboarding_title_email_sources">Connect to Email</string>
    <string name="connect_gmail_title">Connect to Gmail</string>
    <string name="connect_exchange_title">Connect to Exchange</string>
    <string name="onboarding_title_salesforce">Connect to Salesforce</string>
    <string name="tact_username_title">Tact Username</string>
    <string name="tact_password_title">Set a password</string>
    <string name="server">Server</string>
    <string name="on_boarding_salesforce_legend">Sync your contacts, accounts, tasks, events, and notes from Salesforce</string>
    <string name="local_sources_legend">Sync phone contacts and meetings</string>
    <string name="email_sources_legend">What do you use for email?</string>
    <string name="connect_gmail_legend">Connect to Gmail to sync your email and contacts</string>
    <string name="connect_exchange_legend">Enter your Exchange info</string>
    <string name="tact_username_legend">Enter an email address</string>
    <string name="tact_password_legend">Secure your account with a password</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="local_sources_error">"Error sending the device information. Please press continue button again, thanks."</string>
    <string name="have_questions">Have questions?</string>
    <string name="feel_free_close_tact">Feel free to close Tact for now, this may take a while.</string>
    <string name="notify_finished">We\'ll notify you when finished</string>
    <string name="syncing">Syncing</string>
    <string name="create_account">Create Account</string>
    <string name="select_one_email_resource">Select at least 1 e-mail source in order to proceed</string>
    <string name="salesforce_server_error">Your Salesforce account has not been synchronized. Please try again.</string>
    <string name="salesforce_account_error">Your Salesforce account is not configured to connect external apps.</string>
    <string-array name="local_sources_dialogs">
        <item>Syncing local contacts provides the best experience.</item>
        <item>Syncing the local calendar is required for capturing your important meetings.</item>
    </string-array>
    <string name="text_continue">continue</string>
    <string name="email_address">Email address</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="next">next</string>
    <string name="failed">failed</string>
    <string name="retry">retry</string>
    <string name="skip">skip</string>
    <string name="gmail">Gmail</string>
    <string name="salesforce">Salesforce</string>
    <string name="linkedin">Linkedin</string>
    <string name="contacts">Contacts</string>
    <string name="contact">Contact</string>
    <string name="set_password">Set password</string>
    <string name="exchange">Exchange</string>
    <string name="change_password">Change Password</string>
    <string name="note_delete_account">Deleting your account is irreversible.</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="disconnect_account">Disconnect</string>
    <string name="disconnect_info">Choose what you want to do with this source\'s data. Keep My Data will keep your contacts and captured items.\n\nContact support\@tactile.com with questions.</string>
    <string name="disconnect_delete_all">Delete All Data</string>
    <string name="disconnect_keep">Keep My Data</string>
    <string name="disconnect_do_not">Do Not Disconnect</string>
    <string name="test_email">tact@test.com</string>
    <string name="disconnect_salesforce_note">Disconnect to stop syncing and remove the data</string>
    <string name="connected_as">Connected as</string>
    <string name="connection_lost">Connection lost as</string>
    <string name="reauthorize">Reauthorize</string>
    <string name="delete_btn">Delete</string>
    <string name="by_date_created">By Date Created</string>
    <string name="by_contact_name">By Contact Name</string>
    <string name="by_title">By Title</string>
</resources>