<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:background="@drawable/email_password_combo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/type_in_a_username"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_normal_frame"
            android:hint="@string/username"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/light_gray" />
        <TextView
            android:id="@+id/invalid_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/invalid_email"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="invisible" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:background="@drawable/email_password_combo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/type_in_a_password"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_normal_frame"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/light_gray" />

        <EditText
            android:id="@+id/password_text_repeat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_normal_frame"
            android:hint="@string/password_repeat"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/light_gray" />

        <TextView
            android:id="@+id/password_dont_match_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/passwords_dont_match"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>
        <Button
            android:id="@+id/register_me"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            style="@style/green_pwd_btn"
            android:text="@string/register_me"
            android:visibility="invisible"
            android:textColor="@android:color/white" />


</LinearLayout>