<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_weight="1">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:editable="true"
                android:hint="@string/current_password"
                android:lines="1"
                android:layout_marginBottom="2dp"/>

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:editable="true"
                android:hint="@string/new_password"
                android:lines="1"
                android:layout_marginBottom="2dp"/>

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:editable="true"
                android:hint="@string/confirm_a_password"
                android:lines="1"
                android:layout_marginBottom="2dp"/>


            <Button
                android:id="@+id/delete_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/grey_btn"
                android:text="@string/change_password"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

</LinearLayout>