<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/settings_actionbar" />
        <include layout="@layout/divider_layout" />

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/padding_standard"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageView
                android:src="@drawable/settings_sources"
                android:layout_margin="@dimen/padding_standard"
                android:layout_width="@dimen/medium_asset_dimension"
                android:layout_height="@dimen/medium_asset_dimension" />

            <TextView
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/xl_text_size"
                android:text="@string/connection_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/source_username"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/xl_text_size"
                android:text="@string/test_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginBottom="@dimen/padding_standard"
            android:paddingLeft="@dimen/padding_standard"
            android:paddingBottom="@dimen/padding_standard"
            android:paddingRight="@dimen/padding_standard"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_marginRight="@dimen/padding_medium"
                android:id="@+id/disconnect_btn"
                android:text="@string/disconnect_account"
                style="@style/tact_grey_button"/>

            <Button
                android:layout_marginLeft="@dimen/padding_medium"
                android:id="@+id/reauthorize_btn"
                android:text="@string/reauthorize"
                style="@style/tact_orange_button"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>