<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:id="@+id/pop_up_notebook_sort_menu"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        style="@style/option_menu_style"
        android:elevation="14dp"
        android:layout_width="150dp"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/option_menu_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/by_date_btn">

            <TextView
                android:text="@string/by_date_created"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            style="@style/option_menu_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/by_contact_btn">

            <TextView
                android:text="@string/by_contact_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            style="@style/option_menu_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/by_title_btn">

            <TextView
                android:text="@string/by_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>